1.2.5i4:
    Checks & Agents:
    * 0812 nginx_status: New check for monitoring status information of the Nginx web server...
    * 0986 citrix_licenses: new check for monitoring Citrix licenses
    * 0814 Agent versions can now be checked with "at least version X" parameters...
    * 0815 mysql_slave: New check for monitoring MySQL slave sync state
    * 0616 FIX: brocade.fan, brocade.power, brocade.temp: will now only discover services which are not marked as absent

    Multisite:
    * 0934 FIX: Logwatch messages with class unknown ( 'u' ) now displayed as WARN...

    WATO:
    * 0987 New button for updating DNS cache...
    * 0813 FIX: LDAP: Improved slightly missleading logging of LDAP sync actions...

    Reporting & Availability:
    * 0985 Availability: display phases of freqent state changes as "chaos"...


1.2.5i3:
    Core & Setup:
    * 0884 New options --oid and --extraoid for cmk --snmpwalk...
    * 0785 FIX: Availability: fixed memory leak in table statehist...
    * 0903 FIX: availability: fixed bug causing the availability feature not considering timeperiod transitions
    * 0888 FIX: Fix SNMP inventory check in simulation mode

    Checks & Agents:
    * 0149 cisco_secure: New check for Port Security on Cisco swichtes
    * 0751 New localcheck for Linux that makes sure that filesystems in /etc/fstab are mounted...
    * 0783 enterasys_lsnat: new check monitoring the current LSNAT bindings
    * 0601 printer_alerts: check can now display a textual representation of the alert code...
            NOTE: Please refer to the migration notes!
    * 0799 ibm_svc_systemstats.cpu_util: New check for CPU Utilization of an IBM SVC / V7000 device in total
    * 0800 ibm_svc_nodestats.cache, ibm_svc_systemstats.cache: New checks for Cache Usage of IBM SVC / V7000 devices
    * 0150 printer_suply: New option to upturn toner levels...
    * 0801 ibm_svc_eventlog: New Check for Messages in Event log of IBM SVC / V7000 devices