@@ -3028,30 +3028,6 @@ register_check_parameters(
 
 register_check_parameters(
     subgroup_applications,
-    "mysql_slave",
-    _("MySQL Slave"),
-    Dictionary(
-        elements = [
-            ( "seconds_behind_master",
-                Tuple(
-                    title = _("Seconds behind master (Slave lag)"),
-                    help = _("When the slave is actively processing updates, this field shows the difference "
-                             "between the current timestamp on the slave and the original timestamp logged on "
-                             "the master for the most event currently being processed on the slave. "
-                             "You can configure the amount of time you treat as a problem here."),
-                    elements = [
-                       Age(title = _("Warning if above")),
-                       Age(title = _("Critical if above")),
-                    ]
-                )
-            ),
-        ]),
-    None,
-    "dict"
-)
-
-register_check_parameters(
-    subgroup_applications,
     "f5_connections",
     _("F5 Loadbalancer Connections"),
     Dictionary(
@@ -5097,6 +5073,37 @@ register_check_parameters(
     ),
     TextAscii(
        title = _("ID of the license, e.g. <tt>PVSD_STD_CCS</tt>"),
+       allow_empty = False,
+    ),
+    "dict"
+)
+
+register_check_parameters(
+    subgroup_networking,
+    "adva_ifs",
+    _("Adva Optical Transport Laser Power"),
+    Dictionary(
+        elements = [
+            ( "min_output_power",
+              Tuple(
+                  title = _("Sending Power"),
+                  elements = [
+                      Float(title = _("warning if below"), unit = "dBm", default_value = None),
+                      Float(title = _("critical if below"), unit = "dBm", default_value = None),
+                  ])
+            ),
+            ( "min_input_power",
+              Tuple(
+                  title = _("Received Power"),
+                  elements = [
+                      Float(title = _("warning if below"), unit = "dBm", default_value = None),
+                      Float(title = _("critical if below"), unit = "dBm", default_value = None),
+                  ])
+            ),
+        ]
+    ),
+    TextAscii(
+       title = _("Interface"),
        allow_empty = False,
     ),
     "dict"
