@@ -4,6 +4,7 @@
     * 0986 citrix_licenses: new check for monitoring Citrix licenses
     * 0814 Agent versions can now be checked with "at least version X" parameters...
     * 0815 mysql_slave: New check for monitoring MySQL slave sync state
+    * 0617 adva_fsp_if: new check to monitor interfaces of the ADVA FSP 3000 scalable optical transport solution
     * 0616 FIX: brocade.fan, brocade.power, brocade.temp: will now only discover services which are not marked as absent
 
     Multisite:
